--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
 
 <body>
 	<header id="header">
-		<div class="logo"><img src="E:\OC\OC_Projet2\images\Logo\Booki.png"
-				alt="Booki" />
+		<div class="logo"><img src="E:\OC\OC_Projet2\images\Logo\Booki.png" alt="Booki" />
 		</div>
 		<nav class="menu">
 			<a href="" class="menu_logements"><span>Hébergements</span></a>
@@ -31,7 +30,16 @@
 		<section>
 			<div>
 				<h1>Trouver votre hébergement pour des vacances de rêve</h1>
-				<h4>En plein centre-ville ou en pleine nature</h4>
+				<p>En plein centre-ville ou en pleine nature</p>
+			</div>
+			<div class="research">
+				<form class="research_bar">
+					<div class="research_icon">
+						<i class="fa-solid fa-location-dot"></i>
+					</div>
+					<input class="research_input" type="text" name="Rechercher" placeholder="Marseille, France">
+					<input class="research_button" type="submit" value="Rechercher">
+				</form>
 			</div>
 		</section>
 	</main>
