--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-	<header id="header">
+	<header>
 		<div id="logo"><img src="images/Logo/Booki.png" alt="Booki">
 		</div>
 		<nav id="menu">
@@ -345,6 +345,8 @@
 				<p><a href="#">Nous contacter</a></p>
 			</div>
 		</footer>
+
+
 	</main>
 </body>
 
