--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 			</div>
 		</section>
 		<section id="main-section">
-			<article id="logement-article">
+			<article>
 				<h2>Hébergements à Marseille</h2>
 				<div id="logements-cards-container">
 					<div class="logement-card">
@@ -215,7 +215,7 @@
 					<p>Afficher plus</p>
 				</a>
 			</article>
-			<aside id="famous-aside">
+			<aside>
 				<div id="famous-head">
 					<h2>Les plus populaires</h2>
 					<i class="fas fa-chart-line"></i>
@@ -327,7 +327,7 @@
 				</a>
 			</div>
 		</section>
-		<footer id="footer">
+		<footer>
 			<div>
 				<h3>A propos</h3>
 				<p><a href="#">Fonctionnement du site</a></p>
