minor update html
ancre non fonctionnelle corrigée

--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
 		<div id="logo"><img src="images/Logo/Booki.png" alt="Booki">
 		</div>
 		<nav id="menu">
-			<a href="#logement-article" class="menu-item"><span>Hébergements</span></a>
+			<a href="#logements-cards-container" class="menu-item"><span>Hébergements</span></a>
 			<a href="#activities" class="menu-item"><span>Activités</span></a>
 		</nav>
 	</header>
+
 	<main>
 		<section id="top">
 			<div>
@@ -99,7 +100,7 @@
 								</div>
 							</div>
 						</a>
-					</div>
+					</div>					
 					<div class="logement-card">
 						<a href="#">
 							<div class="logement-card-img"><img
@@ -215,6 +216,7 @@
 					<p>Afficher plus</p>
 				</a>
 			</article>
+
 			<aside>
 				<div id="famous-head">
 					<h2>Les plus populaires</h2>
@@ -243,6 +245,7 @@
 							</div>
 						</div>
 					</a>
+
 					<a href="#" class="famous-card">
 						<div class="famous-card-img"> <img
 								src="/images/hebergements/3_medium/aw-creative-VGs8z60yT2c-unsplash.jpg"
@@ -327,6 +330,7 @@
 				</a>
 			</div>
 		</section>
+
 		<footer>
 			<div>
 				<h3>A propos</h3>
@@ -345,6 +349,7 @@
 				<p><a href="#">Nous contacter</a></p>
 			</div>
 		</footer>
+		
 	</main>
 </body>
 
